5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1871_1714.log
== TEST (2019-07-02 16:10:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in arange(mat):
	for j in arange(mat):
		while (mat[i] == mat[j]):
		print(round(size(mat, 2))
-- ERROR:
File "XXXX", line 9
    print(round(size(mat, 2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in arange(mat):
	for j in arange(mat):
		while (mat[i] == mat[j]):
		print(round(size(mat),2))
-- ERROR:
File "XXXX", line 9
    print(round(size(mat),2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in arange(mat):
	for j in arange(mat):
		while (mat[i] == mat[j]):
			valor= size(mat)
		print(round(valor),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in arange(mat):
	for j in arange(mat):
		while (mat[i] == mat[j]):
			valor= size(mat)
		print(round(valor),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in mat[i,:]:
	for j in mat[:,j]:
		while (mat[i] == mat[j]):
			valor= size(mat)
		print(round(valor),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in mat[:,j]:
	for j in mat[i,:]:
		while (mat[i] == mat[j]):
			valor= size(mat)
		print(round(valor),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in mat[:,j]:
	for j in mat[i,:]:
		while (mat[i] == mat[j]):
			valor= size(mat)
		print(round(valor),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("Digite a Matriz: ")))

for i in mat[:,j]:
	for j in mat[i,:]:
		while (mat[i] == mat[j]):
			valor= size(mat)
		print(round(valor),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
